<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>uncrustify</name>
  <version>0.61.20150413</version>
  <description>
    Package a newer version of uncrustify (0.61+, b6593c1, April 14th 2015).
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>GNU GENERAL PUBLIC LICENSE Version 3</license>

  <url>https://github.com/bengardner/uncrustify</url>

  <build_depend>ament_cmake_core</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
